# Real-Time-Multi-Object-Tracking-Re-Identification-System

./: .dvcignore  .gitignore  README.MD  Version History.MD  pyproject.toml
.dvc/: .gitignore
configs/: detection.yaml  inference.yaml  reid.yaml  tracking.yaml
data/processed/: market1501.dvc  mot17.dvc
data/raw/: MOT17.dvc
deployment/api/: models.py  routes.py
deployment/backend/: .env.example  __init__.py  app.py
deployment/backend/core/: config.py  pipeline.py
deployment/backend/utils/: logger.py
deployment/frontend/: app.py
deployment/frontend/pages/: demo_videos.py  home.py  multi_camera.py  person_search.py  upload_video.py
deployment/frontend/utils/: __init__.py  api_client.py  video_utils.py
docs/: Data Sources.MD  Directory Sturcture.MD  Implementation Roadmap.MD  Success Criteria.md  System Architecture.MD  System Design Decisions.MD  Technology Stack.MD
scripts/: create_directory_structure.py  create_init_files.py  create_test_video.py  debug_reid_eval.py  download_market1501.py  download_pretrained_models.py  evaluate_mot.py  evaluate_reid.py  prepare_demo_videos.py  preprocess_market1501.py  preprocess_mot17.py  run_inference.py  test_installation.py  test_pipeline_quick.py  train_reid.py
src/data/: market_dataset.py  transforms.py
src/detection/: detector_base.py  utils.py  yolo_detector.py
src/evaluation/: mot_metrics.py  reid_metrics.py
src/inference/: pipeline.py  video_processor.py
src/reid/: metric_learning.py  reid_base.py  resnet_reid.py
src/tracking/: bytetrack.py  kalman_filter.py  matching.py  track.py  tracker_base.py
src/training/: train_reid.py
src/utils/: config.py  logger.py
src/visualization/: bbox_drawer.py
tests/: conftest.py
tests/integration/: test_inference_pipeline.py
tests/unit/: test_detection.py  test_metrics.py  test_reid.py  test_tracking.py
